Fixed positioning of the navbar making the logo and burger align responsively

--- a/src/styles/components/homepage.scss
+++ b/src/styles/components/homepage.scss
@@ -1,6 +1,6 @@
 .homepage {
   max-width: 1100px;
-  padding: 32px;
+  padding: 0 32px;
 
   @include breakpoint(xl) {
     margin: 0 auto 165px;
